<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_alta_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mcdm.alejandro.myapplication.altaCliente">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtNombre"
            android:singleLine="true"
            android:textSize="25dp"
            android:hint="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtCalle"
            android:textSize="25dp"
            android:hint="@string/calle"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtColonia"
            android:textSize="25dp"
            android:hint="@string/colonia"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtTelefono1"
            android:textSize="25dp"
            android:hint="@string/celular"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtTelefono2"
            android:textSize="25dp"
            android:hint="@string/telefono_casa"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raz_n_social"
        android:textSize="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        />

    <Spinner
        android:id="@+id/spRazonSocial"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:scrollbarSize="25dp"
        >
    </Spinner>

        <Button
            android:id="@+id/btnAgregarRazon"
            android:background="@drawable/ic_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="#929292"
            android:onClick="agregarRazon"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnVenta"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttom_round_comprar"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Vender"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:onClick="hacerVenta"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="guardarCliente"
        android:text="@string/guardar"
        android:textSize="@dimen/btnLetra"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttom_round"
        android:layout_gravity="center_horizontal|bottom"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnLlamar"
        android:layout_marginRight="10dp"
        android:layout_gravity="end"
        app:backgroundTint="#009612"
        android:src="@drawable/phone"
        android:onClick="llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
